<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Middleclass keyboard</string>
    <string name="key__phone_pause" comment="Label for the Pause key in the telephone keyboard layout">Pause</string>
    <string name="key__phone_wait" comment="Label for the Wait key in the telephone keyboard layout">Wait</string>
    <string name="key_popup__threedots_alt" comment="Content description for the three-dots icon in a key popup">Three-dot icon. If visible, indicates that more letters can be used if longer pressed.</string>
    <string name="one_handed__close_btn_content_description" comment="Content description for the one-handed close button">Close one-handed mode.</string>
    <string name="one_handed__move_start_btn_content_description" comment="Content description for the one-handed move to left button">Move keyboard to the left.</string>
    <string name="one_handed__move_end_btn_content_description" comment="Content description for the one-handed move to right button">Move keyboard to the right.</string>
    <string name="settings__media__title">Emojis</string>
    <string name="media__tab__emojis" comment="Tab description for emojis in the media UI">Emojis</string>
    <string name="media__tab__emoticons" comment="Tab description for emoticons in the media UI">Emoticons</string>
    <string name="media__tab__kaomoji" comment="Tab description for kaomoji in the media UI">Kaomoji</string>
    <string name="prefs__media__emoji_preferred_skin_tone">Preferred emoji skin tone</string>
    <string name="prefs__media__emoji_preferred_hair_style">Preferred emoji hair style</string>
    <string name="prefs__media__emoji_history__title" comment="Preference group title">Emoji history</string>
    <string name="prefs__media__emoji_history_enabled" comment="Preference title">Enable emoji history</string>
    <string name="prefs__media__emoji_history_enabled__summary" comment="Preference summary">Retain recently used emojis for quick access</string>
    <string name="prefs__media__emoji_history_pinned_update_strategy" comment="Preference title">Update strategy (Pinned)</string>
    <string name="prefs__media__emoji_history_recent_update_strategy" comment="Preference title">Update strategy (Recent)</string>
    <string name="prefs__media__emoji_history_max_size">Maximum items to keep</string>
    <string name="prefs__media__emoji_history_pinned_reset">Reset pinned emojis</string>
    <string name="prefs__media__emoji_history_reset">Reset recent emojis</string>
    <string name="prefs__media__emoji_suggestion__title" comment="Preference group title">Emoji suggestions</string>
    <string name="prefs__media__emoji_suggestion_enabled" comment="Preference title">Enable emoji suggestions</string>
    <string name="prefs__media__emoji_suggestion_enabled__summary" comment="Preference summary">Provide emoji suggestions while you type</string>
    <string name="prefs__media__emoji_suggestion_type" comment="Preference title">Trigger type</string>
    <string name="prefs__media__emoji_suggestion_update_history" comment="Preference title">Update emoji history</string>
    <string name="prefs__media__emoji_suggestion_update_history__summary" comment="Preference summary">Accepting suggested emojis adds them to the emoji history</string>
    <string name="prefs__media__emoji_suggestion_candidate_show_name" comment="Preference title">Show emoji name</string>
    <string name="pref__input_feedback__group_audio__label" comment="Preference group title">Audio feedback / Sounds</string>
    <string name="pref__input_feedback__audio_enabled__label" comment="Preference title">Enable audio feedback</string>
    <string name="pref__input_feedback__audio_volume__label" comment="Preference title">Sound volume for input events</string>
    <string name="pref__input_feedback__audio_feat_key_press__label" comment="Preference title">Key press sounds</string>
    <string name="pref__input_feedback__audio_feat_key_long_press__label" comment="Preference title">Key long press sounds</string>
    <string name="pref__input_feedback__audio_feat_key_repeated_action__label" comment="Preference title">Key repeated action sounds</string>
    <string name="pref__input_feedback__audio_feat_gesture_swipe__label" comment="Preference title">Gesture swipe sounds</string>
    <string name="pref__input_feedback__audio_feat_gesture_moving_swipe__label" comment="Preference title">Gesture moving swipe sounds</string>
    <string name="pref__input_feedback__group_haptic__label" comment="Preference group title">Haptic feedback / Vibration</string>
    <string name="pref__input_feedback__haptic_enabled__label" comment="Preference title">Enable haptic feedback</string>
    <string name="pref__input_feedback__haptic_vibration_duration__label" comment="Preference title">Vibration duration</string>
    <string name="pref__input_feedback__haptic_vibration_strength__label" comment="Preference title">Vibration strength</string>
    <string name="pref__input_feedback__haptic_feat_key_press__label" comment="Preference title">Key press vibration</string>
    <string name="pref__input_feedback__haptic_feat_key_long_press__label" comment="Preference title">Key long press vibration</string>
    <string name="pref__input_feedback__haptic_feat_key_repeated_action__label" comment="Preference title">Key repeated action vibration</string>
    <string name="pref__input_feedback__haptic_feat_gesture_swipe__label" comment="Preference title">Gesture swipe vibration</string>
    <string name="pref__input_feedback__haptic_feat_gesture_moving_swipe__label" comment="Preference title">Gesture moving swipe vibration</string>
    <string name="pref__input_feedback__any_feat_key_press__summary" comment="Preference summary">e.g. keys, buttons, emoji tabs</string>
    <string name="pref__input_feedback__any_feat_key_long_press__summary" comment="Preference summary">e.g. popup menu</string>
    <string name="pref__input_feedback__any_feat_key_repeated_action__summary" comment="Preference summary">e.g. delete key</string>
    <string name="pref__input_feedback__any_feat_gesture_swipe__summary" comment="Preference summary">not implemented</string>
    <string name="pref__input_feedback__any_feat_gesture_moving_swipe__summary" comment="Preference summary">e.g. cursor control swipe</string>
    <string name="pref__smartbar__enabled__label" comment="Preference title">Enable Smartbar</string>
    <string name="pref__smartbar__enabled__summary" comment="Preference summary">Will show on top of the keyboard</string>
    <string name="pref__dictionary__enable_system_user_dictionary__label" comment="Preference title">Enable system user dictionary</string>
    <string name="pref__dictionary__enable_system_user_dictionary__summary" comment="Preference summary">Suggest words stored in the system user dictionary</string>
    <string name="pref__dictionary__manage_system_user_dictionary__label" comment="Preference title">Manage system user dictionary</string>
    <string name="pref__dictionary__manage_system_user_dictionary__summary" comment="Preference summary">Add, view, and remove entries for the system user dictionary</string>
    <string name="pref__dictionary__enable_internal_user_dictionary__label" comment="Preference title">Enable internal user dictionary</string>
    <string name="pref__dictionary__enable_internal_user_dictionary__summary" comment="Preference summary">Suggest words stored in the internal user dictionary</string>
    <string name="pref__dictionary__manage_floris_user_dictionary__label" comment="Preference title">Manage internal user dictionary</string>
    <string name="pref__dictionary__manage_floris_user_dictionary__summary" comment="Preference summary">Add, view, and remove entries for the internal user dictionary</string>
    <string name="pref__glide__title" comment="Preference group title">Glide typing</string>
    <string name="pref__glide__enabled__label" comment="Preference title">Enable glide typing</string>
    <string name="pref__glide__enabled__summary" comment="Preference summary">Type in a word by sliding your finger through its letters</string>
    <string name="pref__glide__show_trail__label" comment="Preference title">Show glide trail</string>
    <string name="pref__glide__show_trail__summary" comment="Preference summary">Will disappear after each word</string>
    <string name="pref__glide_trail_fade_duration">Glide trail fade time</string>
    <string name="pref__glide_preview_refresh_delay">Preview refresh delay</string>
    <string name="pref__glide__show_preview">Show preview while glide typing</string>
    <string name="pref__gestures__general_title" comment="Preference group title">General gestures</string>
    <string name="pref__gestures__space_bar_title" comment="Preference group title">Space bar gestures</string>
    <string name="pref__gestures__other_title" comment="Preference group title">Other gestures / Gesture thresholds</string>
    <string name="pref__gestures__swipe_up__label" comment="Preference title">Swipe up</string>
    <string name="pref__gestures__swipe_down__label" comment="Preference title">Swipe down</string>
    <string name="pref__gestures__swipe_left__label" comment="Preference title">Swipe left</string>
    <string name="pref__gestures__swipe_right__label" comment="Preference title">Swipe right</string>
    <string name="pref__gestures__space_bar_swipe_up__label" comment="Preference title">Space bar swipe up</string>
    <string name="pref__gestures__space_bar_swipe_left__label" comment="Preference title">Space bar swipe left</string>
    <string name="pref__gestures__space_bar_swipe_right__label" comment="Preference title">Space bar swipe right</string>
    <string name="pref__gestures__space_bar_long_press__label" comment="Preference title">Space bar long press</string>
    <string name="pref__gestures__delete_key_swipe_left__label" comment="Preference title">Delete key swipe left</string>
    <string name="pref__gestures__swipe_velocity_threshold__label" comment="Preference title">Swipe velocity threshold</string>
    <string name="pref__gestures__swipe_distance_threshold__label" comment="Preference title">Swipe distance threshold</string>
    <string name="about__app_icon_content_description" comment="Content description of app icon in About">App icon of Middleclass keyboard</string>
    <string name="about__view_licenses" comment="Label of View licenses button in About">Open source licenses</string>
    <string name="about__view_privacy_policy" comment="Label of View privacy policy button in About">Privacy policy</string>
    <string name="about__view_source_code" comment="Label of View source code button in About">Source code</string>
    <string name="crash_dialog__description" comment="Description of crash dialog">Sorry for the inconvenience, but Middleclass keyboard has crashed due to an unexpected error.</string>
    <string name="crash_dialog__report_instructions" comment="Issue tracker report instructions for the crash dialog. The %s placeholder is the name of the crash report template and always in English/LTR.">If you wish to report this error, first check out the issue tracker on GitHub if your crash has not already been reported.\nIf it hasn\'t, copy the generated crash log and open a new issue. Use the \"%s\" template and fill out the description, the steps to reproduce, and paste the generated crash log at the end. This helps in making FlorisBoard better and more stable for everyone. Thank you!</string>
    <string name="crash_dialog__copy_to_clipboard" comment="Label of Copy to clipboard button in crash dialog">Copy to system clipboard</string>
    <string name="crash_dialog__open_issue_tracker" comment="Label of Open issue tracker button in crash dialog">Open issue tracker (github.com)</string>
    <string name="crash_dialog__close" comment="Label of Close button in crash dialog">Close</string>
</resources>