<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:defaultValue="true"
        app:key="smartbar__enabled"
        app:iconSpaceReserved="false"
        app:title="@string/pref__smartbar__enabled__label"
        app:summary="@string/pref__smartbar__enabled__summary"/>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref__dictionary__title">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            app:key="suggestion__enable_system_user_dictionary"
            app:iconSpaceReserved="false"
            app:title="@string/pref__dictionary__enable_system_user_dictionary__label"
            app:summary="@string/pref__dictionary__enable_system_user_dictionary__summary"/>

        <Preference
            app:dependency="suggestion__enable_system_user_dictionary"
            app:key="suggestion__manage_system_user_dictionary"
            app:iconSpaceReserved="false"
            app:title="@string/pref__dictionary__manage_system_user_dictionary__label"
            app:summary="@string/pref__dictionary__manage_system_user_dictionary__summary"/>

        <SwitchPreferenceCompat
            android:defaultValue="true"
            app:key="suggestion__enable_floris_user_dictionary"
            app:iconSpaceReserved="false"
            app:title="@string/pref__dictionary__enable_internal_user_dictionary__label"
            app:summary="@string/pref__dictionary__enable_internal_user_dictionary__summary"/>

        <Preference
            app:dependency="suggestion__enable_floris_user_dictionary"
            app:key="suggestion__manage_floris_user_dictionary"
            app:iconSpaceReserved="false"
            app:title="@string/pref__dictionary__manage_floris_user_dictionary__label"
            app:summary="@string/pref__dictionary__manage_floris_user_dictionary__summary"/>

    </PreferenceCategory>

</PreferenceScreen>
