<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="glide"
        app:title="@string/pref__glide__title">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            app:disableDependentsState="true"
            app:key="glide__enabled"
            app:title="@string/pref__glide__enabled__label"
            android:summary="@string/pref__glide__enabled__summary"/>

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            app:key="glide__show_trail"
            app:title="@string/pref__glide__show_trail__label"
            android:summary="@string/pref__glide__show_trail__summary"/>

        <dev.patrickgold.florisboard.settings.components.DialogSeekBarPreference
            app:allowDividerAbove="false"
            android:defaultValue="200"
            app:dependency="glide__show_trail"
            app:key="glide__trail_fade_duration"
            app:min="0"
            app:max="500"
            app:iconSpaceReserved="false"
            app:title="@string/pref__glide_trail_fade_duration"
            app:seekBarIncrement="10"
            app:unit="ms"/>

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            app:dependency="glide__show_trail"
            app:key="glide__show_preview"
            app:title="@string/pref__glide__show_preview" />

        <dev.patrickgold.florisboard.settings.components.DialogSeekBarPreference
            app:allowDividerAbove="false"
            android:defaultValue="150"
            app:dependency="glide__show_preview"
            app:key="glide__preview_refresh_delay"
            app:min="50"
            app:max="500"
            app:iconSpaceReserved="false"
            app:title="@string/pref__glide_preview_refresh_delay"
            app:seekBarIncrement="25"
            app:unit="ms"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="general_gestures"
        app:title="@string/pref__gestures__general_title">

        <ListPreference
            app:iconSpaceReserved="false"
            android:defaultValue="shift"
            app:entries="@array/pref__gestures__swipe_action__entries"
            app:entryValues="@array/pref__gestures__swipe_action__values"
            app:dependency="glide__enabled"
            app:key="gestures__swipe_up"
            app:title="@string/pref__gestures__swipe_up__label"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:iconSpaceReserved="false"
            android:defaultValue="hide_keyboard"
            app:entries="@array/pref__gestures__swipe_action__entries"
            app:entryValues="@array/pref__gestures__swipe_action__values"
            app:dependency="glide__enabled"
            app:key="gestures__swipe_down"
            app:title="@string/pref__gestures__swipe_down__label"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:iconSpaceReserved="false"
            android:defaultValue="switch_to_next_subtype"
            app:entries="@array/pref__gestures__swipe_action__entries"
            app:entryValues="@array/pref__gestures__swipe_action__values"
            app:dependency="glide__enabled"
            app:key="gestures__swipe_left"
            app:title="@string/pref__gestures__swipe_left__label"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:iconSpaceReserved="false"
            android:defaultValue="switch_to_prev_subtype"
            app:entries="@array/pref__gestures__swipe_action__entries"
            app:entryValues="@array/pref__gestures__swipe_action__values"
            app:dependency="glide__enabled"
            app:key="gestures__swipe_right"
            app:title="@string/pref__gestures__swipe_right__label"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="space_bar_gestures"
        app:title="@string/pref__gestures__space_bar_title">

        <ListPreference
            app:iconSpaceReserved="false"
            android:defaultValue="switch_to_prev_keyboard"
            app:entries="@array/pref__gestures__swipe_action__entries"
            app:entryValues="@array/pref__gestures__swipe_action__values"
            app:key="gestures__space_bar_swipe_up"
            app:title="@string/pref__gestures__space_bar_swipe_up__label"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:iconSpaceReserved="false"
            android:defaultValue="move_cursor_left"
            app:entries="@array/pref__gestures__swipe_action__entries"
            app:entryValues="@array/pref__gestures__swipe_action__values"
            app:key="gestures__space_bar_swipe_left"
            app:title="@string/pref__gestures__space_bar_swipe_left__label"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:iconSpaceReserved="false"
            android:defaultValue="move_cursor_right"
            app:entries="@array/pref__gestures__swipe_action__entries"
            app:entryValues="@array/pref__gestures__swipe_action__values"
            app:key="gestures__space_bar_swipe_right"
            app:title="@string/pref__gestures__space_bar_swipe_right__label"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:iconSpaceReserved="false"
            android:defaultValue="show_input_method_picker"
            app:entries="@array/pref__gestures__swipe_action__entries"
            app:entryValues="@array/pref__gestures__swipe_action__values"
            app:key="gestures__space_bar_long_press"
            app:title="@string/pref__gestures__space_bar_long_press__label"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="other_gestures"
        app:title="@string/pref__gestures__other_title">

        <ListPreference
            app:iconSpaceReserved="false"
            android:defaultValue="delete_characters_precisely"
            app:entries="@array/pref__gestures__swipe_action_delete__entries"
            app:entryValues="@array/pref__gestures__swipe_action_delete__values"
            app:key="gestures__delete_key_swipe_left"
            app:title="@string/pref__gestures__delete_key_swipe_left__label"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:iconSpaceReserved="false"
            android:defaultValue="normal"
            app:entries="@array/pref__gestures__swipe_velocity_threshold__entries"
            app:entryValues="@array/pref__gestures__swipe_velocity_threshold__values"
            app:key="gestures__swipe_velocity_threshold"
            app:title="@string/pref__gestures__swipe_velocity_threshold__label"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:iconSpaceReserved="false"
            android:defaultValue="normal"
            app:entries="@array/pref__gestures__swipe_distance_threshold__entries"
            app:entryValues="@array/pref__gestures__swipe_distance_threshold__values"
            app:key="gestures__swipe_distance_threshold"
            app:title="@string/pref__gestures__swipe_distance_threshold__label"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</PreferenceScreen>
