<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/app_icon"
                android:src="@mipmap/ic_launcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:contentDescription="@string/about__app_icon_content_description"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:textSize="16sp"
                android:textStyle="italic"/>

            <Button
                android:id="@+id/license_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about__view_licenses"/>

            <Button
                android:id="@+id/privacy_policy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about__view_privacy_policy"/>

            <Button
                android:id="@+id/source_code_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about__view_source_code"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
